# simulation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  index.html  simulation.data  simulation.js  simulation.wasm
src/: context.hpp  error.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  renderer.cpp  renderer.hpp  simerror.hpp
src/3D/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp
src/contexts/: menu.cpp  menu.hpp  scene_2d.cpp  scene_2d.hpp  scene_3d.cpp  scene_3d.hpp
src/lib/: observer.hpp
src/renderer/: blit.cpp  blit.hpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
